src/objects/QPMS__Regulatory_Assesment__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>TEXT(Today() -   DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field is used to select the approval process</description>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change DueDate</fullName>
                </value>
                <value>
                    <fullName>Regulatory Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>This field is used to store the Approval group name</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This approval checkbox is used if the approval is completed or not</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <description>This picklist is used to check whether the approval is need or not</description>
        <label>Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is a lookup to user and  use to store the user for approving or rejecting the Regulatory Assessment</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is a lookup to user and  use to store the user for approving or rejecting the Regulatory Assessment</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is a lookup to user and  use to store the user for approving or rejecting the Regulatory Assessment</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is a lookup to user and  use to store the user for approving or rejecting the Regulatory Assessment</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Aware_Date__c</fullName>
        <formula>QPMS__Complaint__r.QPMS__Aware_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aware Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>This field is used to set the status of approver status whether approved or rejected</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a look up to Complaint object</description>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Regulatory Assessments</relationshipLabel>
        <relationshipName>Regulatory_Assesments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>This field is used to store approver sequence which used in sequential approval process</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_OutCome__c</fullName>
        <description>This field is used to store the Outcome values of decision Tree questionnaire object questions</description>
        <label>Decision Tree OutCome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reportable</fullName>
                </value>
                <value>
                    <fullName>No Report</fullName>
                </value>
                <value>
                    <fullName>Reportable within 5 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 10 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 15 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 20 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 30 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_Template_Name__c</fullName>
        <formula>QPMS__Decision_Tree_Template__r.Name +&apos; (&apos; + QPMS__Decision_Tree_Template__r.QPMS__Revision__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Tree Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to Decision tree template</description>
        <label>Decision Tree Template</label>
        <referenceTo>QPMS__Decision_Tree_Template__c</referenceTo>
        <relationshipLabel>Regulatory Assessments</relationshipLabel>
        <relationshipName>Regulatory_Assesments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used to store the due date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Initial Submitter Used in Approval Process</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_AssesmentsyeQY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <description>Initiating Site</description>
        <label>Initiating Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Justification__c</fullName>
        <description>this field is used to store the justification of regulatory Assessment</description>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>This field is used to store the new due date when it is having second time approval</description>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to set the new owner for regulatory assessment</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>This field is used to store the notes to Approver</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Reviewer__c</fullName>
        <label>Note To Reviewer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is lookup to User and store the value of parent Owner of the record</description>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesmentsyclt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentQueue__c</fullName>
        <description>this field is used for internal use</description>
        <label>ParentQueue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Re_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store rerun or not</description>
        <label>Re Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <description>Reason For Void</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <label>Regulatory Body</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-FDA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is look up to regulatory report</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Regulatory Assessments</relationshipLabel>
        <relationshipName>Regulatory_Assesments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reportable_Event__c</fullName>
        <description>This field is used to sshow whether the Regulatory Assessment event is reportable or not</description>
        <label>Reportable Event?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Review_Required__c</fullName>
        <label>Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to user, it store the user as a reviewer</description>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assesments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed-off By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field describes the status of regulatory Assessment</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplemental_Message__c</fullName>
        <label>Supplemental Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplemental Report is recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>Number Of Days</description>
        <label>Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for internal purpose</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Regulatory Assessment</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Regulatory Assesment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regulatory Assessments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>